--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "bank-aktier",
-  "version": "1.0.0",
+  "name": "vns-bank",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vituskh/vns-bank.git"
   },
   "author": "Vitus Holm",
-  "license": "ISC",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/vituskh/vns-bank/issues"
+  },
+  "homepage": "https://github.com/vituskh/vns-bank#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.6",
-    "express": "^4.17.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "jest": "^29.4.3"
   }
 }
