--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "vns-bank",
-  "version": "2.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vituskh/vns-bank.git"
-  },
-  "author": "Vitus Holm",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/vituskh/vns-bank/issues"
-  },
-  "homepage": "https://github.com/vituskh/vns-bank#readme",
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "jest": "^29.4.3"
-  }
+	"name": "vns-bank",
+	"version": "2.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "test"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/vituskh/vns-bank.git"
+	},
+	"author": "Vitus Holm",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/vituskh/vns-bank/issues"
+	},
+	"homepage": "https://github.com/vituskh/vns-bank#readme",
+	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"connect-mongo": "^4.6.0",
+		"dotenv": "^16.0.3",
+		"ejs": "^3.1.8",
+		"express": "^4.18.2",
+		"express-session": "^1.17.3",
+		"mongoose": "^6.10.0"
+	},
+	"devDependencies": {
+		"jest": "^29.4.3"
+	},
+  "type": "module"
 }
