--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "^16.0.3",
 		"ejs": "^3.1.8",
 		"express": "^4.18.2",
+		"express-async-handler": "^1.2.0",
 		"express-session": "^1.17.3",
 		"mongoose": "^6.10.0"
 	},
