--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
 		"express-session": "^1.17.3",
-		"mongoose": "^6.10.0"
+		"mongoose": "^6.10.0",
+		"winston": "^3.8.2"
 	},
 	"type": "module",
 	"devDependencies": {
